--- a/examples/2048/2048-multi-turn.ipynb
+++ b/examples/2048/2048-multi-turn.ipynb
@@ -1,13 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "To train this agent, click *Runtime* and press *Run all*. Make sure you've enabled a free Tesla T4 GPU!\n",
+    "<div class=\"align-center\">\n",
+    "<a href=\"https://openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/images/ART_pill.png\" width=\"115\"></a>\n",
+    "<a href=\"https://discord.gg/openpipe\"><img src=\"https://github.com/openpipe/art/raw/main/images/Discord_pill.png\" width=\"145\"></a>\n",
+    "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/images/Documentation_pill.png\" width=\"125\"></a></a> Join Discord to ask questions + ⭐ <i>Star us on <a href=\"https://github.com/openpipe/art\">Github</a> </i> ⭐\n",
+    "</div>\n",
+    "\n",
+    "To run on your own machine, follow the installation instructions [here](https://art.openpipe.ai).\n",
+    "\n",
+    "This notebook shows how to train a Qwen 2.5 7B model to play 2048. It will demonstrate how to set up a multi-turn agent, how to train it, and how to evaluate it.\n",
+    "\n",
+    "Completions will be logged to OpenPipe, and metrics will be logged to Weights & Biases.\n",
+    "\n",
+    "You will learn how to [set up](#Setup) a simulated environment, how to declare a [model](#Model), how to define a [rollout](#Rollout), and how to run a [training loop](#Training Loop)."
    ]
   },
   {
@@ -37,6 +47,9 @@
     }
    ],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "%%html\n",
     "<style>\n",
     ".cell-output-ipywidget-background {\n",
