--- a/examples/2048/2048-multi-turn.ipynb
+++ b/examples/2048/2048-multi-turn.ipynb
@@ -6,18 +6,20 @@
    "source": [
     "To train this agent, click *Runtime* and press *Run all*. Make sure you've enabled a free Tesla T4 GPU!\n",
     "<div class=\"align-center\">\n",
-    "<a href=\"https://openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/images/ART_pill.png\" width=\"115\"></a>\n",
-    "<a href=\"https://discord.gg/openpipe\"><img src=\"https://github.com/openpipe/art/raw/main/images/Discord_pill.png\" width=\"145\"></a>\n",
-    "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/images/Documentation_pill.png\" width=\"125\"></a></a> Join Discord to ask questions + ⭐ <i>Star us on <a href=\"https://github.com/openpipe/art\">Github</a> </i> ⭐\n",
+    "<a href=\"https://openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/ART_pill.png\" height=\"50\"></a>\n",
+    "<a href=\"https://discord.gg/openpipe\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Discord_pill.png\" height=\"50\"></a>\n",
+    "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Documentation_pill.png\" height=\"50\"></a></a>\n",
+    "\n",
+    "Join Discord to ask questions + ⭐ <i>Star us on <a href=\"https://github.com/openpipe/art\">Github</a> </i> ⭐\n",
     "</div>\n",
     "\n",
-    "To run on your own machine, follow the installation instructions [here](https://art.openpipe.ai).\n",
+    "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Header_separator.png\" height=\"5\"></a></a>\n",
     "\n",
     "This notebook shows how to train a Qwen 2.5 7B model to play 2048. It will demonstrate how to set up a multi-turn agent, how to train it, and how to evaluate it.\n",
     "\n",
     "Completions will be logged to OpenPipe, and metrics will be logged to Weights & Biases.\n",
     "\n",
-    "You will learn how to [set up](#Setup) a simulated environment, how to declare a [model](#Model), how to define a [rollout](#Rollout), and how to run a [training loop](#Training Loop)."
+    "You will learn how to construct a [simulated environment](#Simulated-Environment), how to define a [rollout](#Rollout), and how to run a [training loop](#Training-Loop)."
    ]
   },
   {
@@ -63,6 +65,216 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Installation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "!pip install openpipe-art"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Agent Environment\n",
+    "\n",
+    "ART allows your agent to learn by interacting with its environment. In this example, we'll create an environment in which the agent can play 2048.\n",
+    "\n",
+    "Feel free to read as much or as little of this section's code as you'd like. The important thing to understand is that we're defining the rules of this agent's environment. In many cases, this will already be defined by the task you're trying to solve, but if you need to define a custom environment, this is how you do it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import random\n",
+    "from typing import TypedDict\n",
+    "from typing import Literal\n",
+    "from pydantic import BaseModel\n",
+    "import string\n",
+    "import xml.etree.ElementTree as ET\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "WINNING_VALUE = 512\n",
+    "\n",
+    "# Class that keeps track of state for a single game of 2048\n",
+    "class TwentyFortyEightGame(TypedDict):\n",
+    "    id: str\n",
+    "    board: list[list[int | None]]\n",
+    "\n",
+    "# Randomly populates a cell on the board with a 2 or 4\n",
+    "def populate_random_cell(game: TwentyFortyEightGame) -> None:\n",
+    "    all_clear_coordinates = [\n",
+    "        (i, j)\n",
+    "        for i in range(len(game[\"board\"]))\n",
+    "        for j in range(len(game[\"board\"][i]))\n",
+    "        if game[\"board\"][i][j] is None\n",
+    "    ]\n",
+    "    random_clear_coordinates = random.choice(all_clear_coordinates)\n",
+    "    # 90% chance to populate a 2, 10% chance to populate a 4\n",
+    "    game[\"board\"][random_clear_coordinates[0]][random_clear_coordinates[1]] = (\n",
+    "        2 if random.random() < 0.9 else 4\n",
+    "    )\n",
+    "\n",
+    "# Generates a new game of 2048\n",
+    "def generate_game(board_length: int = 4) -> TwentyFortyEightGame:\n",
+    "    # random 6 character string\n",
+    "    id = \"\".join(random.choices(string.ascii_letters + string.digits, k=6))\n",
+    "    game = {\n",
+    "        \"id\": id,\n",
+    "        \"board\": [[None for _ in range(board_length)] for _ in range(board_length)],\n",
+    "    }\n",
+    "\n",
+    "    # populate two random cells\n",
+    "    populate_random_cell(game)\n",
+    "    populate_random_cell(game)\n",
+    "\n",
+    "    return game\n",
+    "\n",
+    "# Renders the board in a human-readable format\n",
+    "def render_board(game: TwentyFortyEightGame) -> str:\n",
+    "    board = game[\"board\"]\n",
+    "    # print something like this:\n",
+    "    # _    | 2    | _    | 4\n",
+    "    # 4    | 8    | 2    | 16\n",
+    "    # 16   | 32   | 64   | 128\n",
+    "    # _    | 2    | 2    | 4\n",
+    "    # where _ is an empty cell\n",
+    "\n",
+    "    max_cell_width = max(\n",
+    "        [len(str(cell)) for row in board for cell in row if cell is not None]\n",
+    "    )\n",
+    "\n",
+    "    board_str = \"\"\n",
+    "    for row in board:\n",
+    "        # pad the cells with spaces to make them the same width\n",
+    "        board_str += \"|\".join(\n",
+    "            [\n",
+    "                str(cell).rjust(max_cell_width)\n",
+    "                if cell is not None\n",
+    "                else \"_\".rjust(max_cell_width)\n",
+    "                for cell in row\n",
+    "            ]\n",
+    "        )\n",
+    "        board_str += \"\\n\"\n",
+    "    return board_str\n",
+    "\n",
+    "\n",
+    "# condense, privileging matches at the start of the sequence\n",
+    "# sequences should be passed starting with cells that are the furthest in the direction in which the board is being condensed\n",
+    "def condense_sequence(sequence: list[int | None]) -> list[int | None]:\n",
+    "    condensed_sequence = []\n",
+    "\n",
+    "    gapless_sequence = [cell for cell in sequence if cell is not None]\n",
+    "\n",
+    "    i = 0\n",
+    "    while i < len(gapless_sequence):\n",
+    "        if (\n",
+    "            i + 1 < len(gapless_sequence)\n",
+    "            and gapless_sequence[i] == gapless_sequence[i + 1]\n",
+    "        ):\n",
+    "            condensed_sequence.append(gapless_sequence[i] * 2)\n",
+    "            i += 2\n",
+    "        else:\n",
+    "            condensed_sequence.append(gapless_sequence[i])\n",
+    "            i += 1\n",
+    "\n",
+    "    # pad the sequence with None at the end\n",
+    "    return condensed_sequence + [None] * (4 - len(condensed_sequence))\n",
+    "\n",
+    "# Condenses the board in a given direction\n",
+    "def condense_board(\n",
+    "    game: TwentyFortyEightGame, direction: Literal[\"left\", \"right\", \"up\", \"down\"]\n",
+    ") -> None:\n",
+    "    if direction == \"left\":\n",
+    "        for row in game[\"board\"]:\n",
+    "            condensed_row = condense_sequence(row)\n",
+    "            for i in range(len(row)):\n",
+    "                row[i] = condensed_row[i]\n",
+    "\n",
+    "    if direction == \"right\":\n",
+    "        for row in game[\"board\"]:\n",
+    "            reversed_row = row[::-1]\n",
+    "            # reverse the row before and after condensing\n",
+    "            condensed_row = condense_sequence(reversed_row)[::-1]\n",
+    "            for i in range(len(row)):\n",
+    "                row[i] = condensed_row[i]\n",
+    "\n",
+    "    if direction == \"up\":\n",
+    "        for col_index in range(len(game[\"board\"][0])):\n",
+    "            column = [row[col_index] for row in game[\"board\"]]\n",
+    "\n",
+    "            condensed_column = condense_sequence(column)\n",
+    "            for row_index in range(len(column)):\n",
+    "                game[\"board\"][row_index][col_index] = condensed_column[row_index]\n",
+    "\n",
+    "    if direction == \"down\":\n",
+    "        for col_index in range(len(game[\"board\"][0])):\n",
+    "            column = [row[col_index] for row in game[\"board\"]]\n",
+    "            reversed_column = column[::-1]\n",
+    "            condensed_column = condense_sequence(reversed_column)[::-1]\n",
+    "            for row_index in range(len(column)):\n",
+    "                game[\"board\"][row_index][col_index] = condensed_column[row_index]\n",
+    "\n",
+    "\n",
+    "# Applies an agent move to the game board\n",
+    "def apply_agent_move(game: TwentyFortyEightGame, move_xml: str) -> None:\n",
+    "    direction = None\n",
+    "    # parse the move\n",
+    "    try:\n",
+    "        root = ET.fromstring(move_xml)\n",
+    "        direction = root.text\n",
+    "    except Exception as e:\n",
+    "        raise ValueError(\"Invalid xml\")\n",
+    "\n",
+    "    if direction not in [\"left\", \"right\", \"up\", \"down\"]:\n",
+    "        raise ValueError(\"Invalid direction\")\n",
+    "\n",
+    "    condense_board(game, direction)\n",
+    "\n",
+    "    populate_random_cell(game)\n",
+    "\n",
+    "# Returns the maximum cell value on the board\n",
+    "def max_cell_value(game: TwentyFortyEightGame) -> int:\n",
+    "    return max([cell for row in game[\"board\"] for cell in row if cell is not None])\n",
+    "\n",
+    "# Returns True if the game is finished\n",
+    "def check_game_finished(game: TwentyFortyEightGame) -> bool:\n",
+    "    if max_cell_value(game) >= WINNING_VALUE:\n",
+    "        return True\n",
+    "\n",
+    "    # check if any cell is empty\n",
+    "    if any(cell is None for row in game[\"board\"] for cell in row):\n",
+    "        return False\n",
+    "\n",
+    "    return True\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Declaring a Model\n",
+    "\n",
+    "Now that we've defined the rules of our environment, we can create a model that will learn to play 2048. We'll use a Qwen 2.5 7B model for this example. The `name` parameter will be associated with a wandb run, and the `base_model` parameter is the model that we'll be training a LoRA on top of.\n",
+    "\n",
+    "We're also initiating an OpenPipe client to report completions to OpenPipe to help debug issues. While logging to OpenPipe is free, it is not required for training. However, if you do want to enable logging, remember to add `OPENPIPE_API_KEY` as well as `WANDB_API_KEY` to your environment variables!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -83,16 +295,34 @@
     "\n",
     "load_dotenv()\n",
     "\n",
-    "op_client = OpenPipe()\n",
-    "print(\"OpenPipe client initialized\")\n",
-    "\n",
     "random.seed(42)\n",
     "\n",
-    "\n",
+    "# Initialize the server\n",
     "api = art.LocalAPI(wandb_project=\"agent-reinforcement-training\")\n",
+    "\n",
+    "# Declare the model\n",
     "model = await api.get_or_create_model(\n",
     "    name=\"2048-multi-turn-001\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "# Optional logging client\n",
+    "op_client = OpenPipe()\n",
+    "print(\"OpenPipe client initialized\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining a Rollout\n",
+    "\n",
+    "A rollout is a single episode of an agent performing its task. It is generates one or more trajectories, which are lists of messages and choices.\n",
+    "\n",
+    "In this example, the rollout function generates a game of 2048, and the agent plays it until the game is finished. It then returns a trajectory which contains all the `system` and `user` messages presented to the agent, as well as all the `choices` that the agent made.\n",
+    "\n",
+    "When the game is finished the `reward` for the agent's performance is calculated based on the highest cell value on the board, which is then assigned to the trajectory.\n",
+    "\n",
+    "This rollout function will be called many times in parallel during each iteration of the training loop."
    ]
   },
   {
@@ -107,14 +337,6 @@
     "import time\n",
     "import math\n",
     "import requests\n",
-    "\n",
-    "from .utils import (\n",
-    "    generate_game,\n",
-    "    render_board,\n",
-    "    apply_agent_move,\n",
-    "    check_game_finished,\n",
-    "    max_cell_value,\n",
-    ")\n",
     "\n",
     "WINNING_VALUE = 512\n",
     "\n",
@@ -231,7 +453,29 @@
     "\n",
     "    return trajectory\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training Loop\n",
     "\n",
+    "The training loop is where the magic happens. For each of the 500 iterations defined below, the rollout function will be called 18 times in parallel. This means that 18 games will be played at once. Each game will produce a trajectory, which will be used to update the model.\n",
+    "\n",
+    "The `gather` step will wait for all of the trajectories to be generated, then it will delete all but the most recent checkpoint and train the model on the new trajectories.\n",
+    "\n",
+    "Inference will be blocked until the training is complete.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "openai_client = await model.openai_client()\n",
     "for i in range(await model.get_step(), 500):\n",
     "    train_groups = await art.gather_trajectory_groups(\n",
@@ -245,6 +489,21 @@
     "    )\n",
     "    await model.delete_checkpoints()\n",
     "    await model.train(train_groups, config=art.TrainConfig(learning_rate=3e-5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"align-center\">\n",
+    "<a href=\"https://openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/ART_pill.png\" height=\"50\"></a>\n",
+    "<a href=\"https://discord.gg/openpipe\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Discord_pill.png\" height=\"50\"></a>\n",
+    "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Documentation_pill.png\" height=\"50\"></a></a>\n",
+    "\n",
+    "Join Discord to ask questions + ⭐ <i>Star us on <a href=\"https://github.com/openpipe/art\">Github</a> </i> ⭐\n",
+    "</div>\n",
+    "\n",
+    "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Header_separator.png\" height=\"5\"></a></a>"
    ]
   }
  ],
