--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -49,8 +49,7 @@
     }
    ],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "# Minor styling adjustments\n",
     "\n",
     "%%html\n",
     "<style>\n",
