--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -297,11 +297,11 @@
     "random.seed(42)\n",
     "\n",
     "# Initialize the server\n",
-    "api = art.LocalAPI(wandb_project=\"agent-reinforcement-training\")\n",
+    "api = art.LocalAPI()\n",
     "\n",
     "# Declare the model\n",
     "model = await api.get_or_create_model(\n",
-    "    name=\"2048-multi-turn-001\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
+    "    name=\"001\", project=\"2048-multi-turn\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
     ")\n",
     "\n",
     "# Optional logging client\n",
