--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -77,7 +77,9 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install openpipe-art"
+    "!pip install openpipe-art\n",
+    "# optional package, used for logging\n",
+    "!pip install openpipe"
    ]
   },
   {
