--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -8,18 +8,18 @@
     "<div class=\"align-center\">\n",
     "<a href=\"https://openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/assets/ART_pill.png\" height=\"50\"></a>\n",
     "<a href=\"https://discord.gg/openpipe\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Discord_pill.png\" height=\"50\"></a>\n",
-    "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Documentation_pill.png\" height=\"50\"></a></a>\n",
+    "<a href=\"https://openpipe.ai/blog\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Launch_pill.png\" height=\"50\"></a>\n",
     "\n",
-    "Join Discord to ask questions + ⭐ <i>Star us on <a href=\"https://github.com/openpipe/art\">Github</a> </i> ⭐\n",
+    "Questions? Join the Discord and ask away! For feature requests or to leave a star, visit our [Github](https://github.com/openpipe/art).\n",
     "</div>\n",
     "\n",
-    "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Header_separator.png\" height=\"5\"></a></a>\n",
+    "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Header_separator.png\" height=\"5\"></a>\n",
     "\n",
     "This notebook shows how to train a Qwen 2.5 7B model to play 2048. It will demonstrate how to set up a multi-turn agent, how to train it, and how to evaluate it.\n",
     "\n",
     "Completions will be logged to OpenPipe, and metrics will be logged to Weights & Biases.\n",
     "\n",
-    "You will learn how to construct a [simulated environment](#Simulated-Environment), how to define a [rollout](#Rollout), and how to run a [training loop](#Training-Loop)."
+    "You will learn how to construct an [agentic environment](#Agentic-Environment), how to define a [rollout](#Defining-a-Rollout), and how to run a [training loop](#Training-Loop)."
    ]
   },
   {
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Agent Environment\n",
+    "### Agentic Environment\n",
     "\n",
     "ART allows your agent to learn by interacting with its environment. In this example, we'll create an environment in which the agent can play 2048.\n",
     "\n",
@@ -499,9 +499,10 @@
     "<div class=\"align-center\">\n",
     "<a href=\"https://openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/ART_pill.png\" height=\"50\"></a>\n",
     "<a href=\"https://discord.gg/openpipe\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Discord_pill.png\" height=\"50\"></a>\n",
-    "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Documentation_pill.png\" height=\"50\"></a></a>\n",
+    "<a href=\"https://openpipe.ai/blog\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Launch_pill.png\" height=\"50\"></a>\n",
     "\n",
-    "Join Discord to ask questions + ⭐ <i>Star us on <a href=\"https://github.com/openpipe/art\">Github</a> </i> ⭐\n",
+    "\n",
+    "Questions? Join the Discord and ask away! For feature requests or to leave a star, visit our [Github](https://github.com/openpipe/art).\n",
     "</div>\n",
     "\n",
     "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Header_separator.png\" height=\"5\"></a></a>"
