--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -19,7 +19,7 @@
         "\n",
         "Completions will be logged to OpenPipe, and metrics will be logged to Weights & Biases.\n",
         "\n",
-        "You will learn how to construct an [agentic environment](#Agentic-Environment), how to define a [rollout](#Defining-a-Rollout), and how to run a [training loop](#Training-Loop)."
+        "You will learn how to construct an [agentic environment](#environment), how to define a [rollout](#rollout), and how to run a [training loop](#loop)."
       ]
     },
     {
@@ -84,7 +84,11 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "tags": [
+          "environment"
+        ]
+      },
       "source": [
         "### Agentic Environment\n",
         "\n",
@@ -313,7 +317,11 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "tags": [
+          "rollout"
+        ]
+      },
       "source": [
         "### Defining a Rollout\n",
         "\n",
@@ -459,7 +467,11 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "tags": [
+          "loop"
+        ]
+      },
       "source": [
         "### Training Loop\n",
         "\n",
