--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -19,7 +19,7 @@
         "\n",
         "Completions will be logged to OpenPipe, and metrics will be logged to Weights & Biases.\n",
         "\n",
-        "You will learn how to construct an [agentic environment](#environment), how to define a [rollout](#rollout), and how to run a [training loop](#loop)."
+        "You will learn how to construct an [agentic environment](#Environment), how to define a [rollout](#Rollout), and how to run a [training loop](#Loop)."
       ]
     },
     {
@@ -91,6 +91,7 @@
       },
       "source": [
         "### Agentic Environment\n",
+        "<a name=\"Environment\"></a>\n",
         "\n",
         "ART allows your agent to learn by interacting with its environment. In this example, we'll create an environment in which the agent can play 2048.\n",
         "\n",
@@ -324,6 +325,7 @@
       },
       "source": [
         "### Defining a Rollout\n",
+        "<a name=\"Rollout\"></a>\n",
         "\n",
         "A rollout is a single episode of an agent performing its task. It is generates one or more trajectories, which are lists of messages and choices.\n",
         "\n",
@@ -474,6 +476,7 @@
       },
       "source": [
         "### Training Loop\n",
+        "<a name=\"Loop\"></a>\n",
         "\n",
         "The training loop is where the magic happens. For each of the 500 iterations defined below, the rollout function will be called 18 times in parallel. This means that 18 games will be played at once. Each game will produce a trajectory, which will be used to update the model.\n",
         "\n",
