Remove bottom divider

--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -518,9 +518,7 @@
         "\n",
         "\n",
         "Questions? Join the Discord and ask away! For feature requests or to leave a star, visit our [Github](https://github.com/openpipe/art).\n",
-        "</div>\n",
-        "\n",
-        "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/notebooks/assets/Header_separator.png\" height=\"5\"></a></a>"
+        "</div>\n"
       ]
     }
   ],
