Update yes-no-maybe example

--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -36,28 +36,49 @@
       "source": [
         "import art\n",
         "from dotenv import load_dotenv\n",
-        "import openai\n",
+        "from litellm import acompletion\n",
+        "from pydantic import BaseModel\n",
         "\n",
         "load_dotenv()\n",
         "\n",
+        "class ModelConfig(BaseModel):\n",
+        "    litellm_model_name: str\n",
+        "\n",
+        "api = art.LocalAPI()\n",
         "\n",
         "model = art.TrainableModel(\n",
         "    name=\"001\",\n",
         "    project=\"yes-no-maybe\",\n",
         "    base_model=\"Qwen/Qwen2.5-7B-Instruct\",\n",
+        "    config=ModelConfig(),\n",
         ")\n",
-        "await model.register(art.LocalAPI())\n",
+        "await model.register(api)\n",
+        "\n",
+        "gpt4o = art.Model(\n",
+        "    name=\"gpt4o\",\n",
+        "    project=\"yes-no-maybe\",\n",
+        "    base_model=\"gpt-4o\",\n",
+        "    config=ModelConfig(litellm_model_name=\"openai/gpt-4o\"),\n",
+        ")\n",
+        "await gpt4o.register(api)\n",
         "\n",
         "\n",
-        "async def rollout(client: openai.AsyncOpenAI, prompt: str) -> art.Trajectory:\n",
+        "\n",
+        "async def rollout(model: art.Model, prompt: str) -> art.Trajectory:\n",
         "    messages: art.Messages = [\n",
         "        {\n",
         "            \"role\": \"user\",\n",
         "            \"content\": prompt,\n",
         "        }\n",
         "    ]\n",
-        "    chat_completion = await client.chat.completions.create(\n",
-        "        messages=messages, model=model.name, max_tokens=100\n",
+        "    assert isinstance(model.config, ModelConfig)\n",
+        "    model_id = model.config.litellm_model_name if model.config.litellm_model_name else f\"hosted_vllm/{model.name}\"\n",
+        "    chat_completion = await acompletion(\n",
+        "        base_url=model.base_url,\n",
+        "        api_key=model.api_key,\n",
+        "        model=model_id,\n",
+        "        messages=messages,\n",
+        "        max_completion_tokens=100,\n",
         "    )\n",
         "    choice = chat_completion.choices[0]\n",
         "    content = choice.message.content\n",
@@ -90,11 +111,10 @@
         "    ]\n",
         "]\n",
         "\n",
-        "openai_client = model.openai_client()\n",
         "for _ in range(await model.get_step(), 1_000):\n",
         "    train_groups = await art.gather_trajectory_groups(\n",
         "        (\n",
-        "            art.TrajectoryGroup(rollout(openai_client, prompt) for _ in range(64))\n",
+        "            art.TrajectoryGroup(rollout(model, prompt) for _ in range(64))\n",
         "            for prompt in prompts\n",
         "        ),\n",
         "        pbar_desc=\"gather\",\n",
@@ -102,7 +122,24 @@
         "    await model.train(\n",
         "        train_groups,\n",
         "        config=art.TrainConfig(learning_rate=1e-4),\n",
-        "    )"
+        "    )\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "val_groups = await art.gather_trajectory_groups(\n",
+        "    (\n",
+        "        art.TrajectoryGroup(rollout(gpt4o, prompt) for _ in range(64))\n",
+        "        for prompt in prompts\n",
+        "    ),\n",
+        "    pbar_desc=\"gather\",\n",
+        ")\n",
+        "await gpt4o.log(val_groups, split=\"val\")"
       ]
     }
   ],
