--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -39,10 +39,12 @@
         "from litellm import acompletion\n",
         "from pydantic import BaseModel\n",
         "\n",
+        "from art.utils.litellm import convert_litellm_choice_to_openai\n",
+        "\n",
         "load_dotenv()\n",
         "\n",
         "class ModelConfig(BaseModel):\n",
-        "    litellm_model_name: str\n",
+        "    litellm_model_name: str | None\n",
         "\n",
         "api = art.LocalAPI()\n",
         "\n",
@@ -80,7 +82,7 @@
         "        messages=messages,\n",
         "        max_completion_tokens=100,\n",
         "    )\n",
-        "    choice = chat_completion.choices[0]\n",
+        "    choice = convert_litellm_choice_to_openai(chat_completion.choices[0])\n",
         "    content = choice.message.content\n",
         "    assert isinstance(content, str)\n",
         "    if content == \"yes\":\n",
