--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -419,7 +419,7 @@
     "\n",
     "@art.retry(exceptions=(openai.LengthFinishReasonError, requests.ReadTimeout))\n",
     "async def rollout(\n",
-    "    client: openai.AsyncOpenAI, step: int, is_validation: bool\n",
+    "    model: art.Model, step: int, is_validation: bool\n",
     ") -> art.Trajectory:\n",
     "    game = generate_game()\n",
     "\n",
@@ -444,6 +444,7 @@
     "        messages = trajectory.messages()\n",
     "\n",
     "        async def get_completion():\n",
+    "            client = model.openai_client()\n",
     "            return await client.chat.completions.create(\n",
     "                max_completion_tokens=128,\n",
     "                messages=messages,\n",
@@ -560,12 +561,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai_client = model.openai_client()\n",
     "for i in range(await model.get_step(), 10):\n",
     "    train_groups = await art.gather_trajectory_groups(\n",
     "        (\n",
     "            art.TrajectoryGroup(\n",
-    "                rollout(openai_client, i, is_validation=False) for _ in range(18)\n",
+    "                rollout(model, i, is_validation=False) for _ in range(18)\n",
     "            )\n",
     "            for _ in range(1)\n",
     "        ),\n",
