Move benchmarking to old_benchmarking

--- a/examples/tic_tac_toe/benchmark_tic_tac_toe.ipynb
+++ b/examples/tic_tac_toe/benchmark_tic_tac_toe.ipynb
@@ -26,8 +26,8 @@
     }
    ],
    "source": [
-    "from art.utils.benchmarking.generate_comparison_table import generate_comparison_table\n",
-    "from art.utils.benchmarking.types import BenchmarkedModelKey\n",
+    "from art.utils.old_benchmarking.generate_comparison_table import generate_comparison_table\n",
+    "from art.utils.old_benchmarking.types import BenchmarkedModelKey\n",
     "\n",
     "table = generate_comparison_table(\n",
     "    project=\"tic-tac-toe\",\n",
@@ -58,9 +58,9 @@
     }
    ],
    "source": [
-    "from art.utils.benchmarking.generate_line_graphs import generate_line_graphs\n",
-    "from art.utils.benchmarking.display_image_grid import display_image_grid\n",
-    "from art.utils.benchmarking.types import BenchmarkedModelKey\n",
+    "from art.utils.old_benchmarking.generate_line_graphs import generate_line_graphs\n",
+    "from art.utils.old_benchmarking.display_image_grid import display_image_grid\n",
+    "from art.utils.old_benchmarking.types import BenchmarkedModelKey\n",
     "\n",
     "graph_image_paths = generate_line_graphs(\n",
     "    project=\"tic-tac-toe\",\n",
